--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,36 @@
 @@include('./template/header.html')
-	
-	Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которой над взобравшись дорогу рыбными свой деревни, парадигматическая она сбить даль щеке! Прямо мир агенство о предложения буквенных реторический это.
+<div class="c-top-panel">
+	<div class="c-top-panel__wrapper">
+		<div class="c-top-panel__block">
+			<button class="c-top-panel__button c-button-sing-up">Записаться</button>
+			<p class="c-top-panel__text m-l-20">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
+		</div>
+		<div class="c-top-panel__block">
+			<div class="c-top-panel__contact">
+				<span class="c-top-panel__phone"></span>
+				<div class="l-container m-l-15">
+					<a class="c-top-panel__number" href="tel:+79992222222">+7 999 222 22 22</a>
+					<span class="c-top-panel__text">ул. Большая Ордынка 38</span>
+				</div>
+			</div>
+			<div class="c-icons m-l-30">
+				<span class="c-icons__icon c-icons__icon--red"><i class="fab fa-instagram icon-middle"></i></span>
+				<span class="c-icons__icon c-icons__icon--red m-l-5"><i class="fab fa-vk icon-middle"></i></span>
+			</div>
+		</div>
+	</div>
+</div>
+<header class="c-header">
+	<div class="c-header__wrapper">
+		<img src="img/logo.png" class="c-header__logo">
+		<nav class="c-header__nav c-nav">
+			<ul class="c-nav__list">
+				<li class="c-nav__item">Дейтелинг</li>
+				<li class="c-nav__item">Услуги</li>
+				<li class="c-nav__item">Новости</li>
+				<li class="c-nav__item">Контакты</li>
+			</ul>
+		</nav>
+	</div>
+</header>
 @@include('./template/footer.html')
