--- a/app/index.html
+++ b/app/index.html
@@ -112,4 +112,174 @@
 	</div>
 	<a class="c-services__button" href="" download><span class="c-services__button-text">Посмотреть прайс</span><span class="c-services__button-icon"></span></a>
 </section>
+<section class="c-choice" style="background-image: url('/img/c_main.jpg')">
+	<h3 class="page-title page-title--white">Почему нас выбирают</h3>
+	<div class="c-choice__wrapper">
+		<div class="c-choice__item" style="background-image: url('/img/c1.png')">
+			<p class="c-choice__text">Только лучшие материалы</p>
+		</div>
+		<div class="c-choice__item" style="background-image: url('/img/c2.png')">
+			<p class="c-choice__text">Большой опыт работы</p>
+		</div>
+		<div class="c-choice__item" style="background-image: url('/img/c3.png')">
+			<p class="c-choice__text">Желание стать лучшими</p>
+		</div>
+		<div class="c-choice__item" style="background-image: url('/img/c4.png')">
+			<p class="c-choice__text">Разумные цены</p>
+		</div>
+		<div class="c-choice__item" style="background-image: url('/img/c5.png')">
+			<p class="c-choice__text"> Положительные отзывы</p>
+		</div>
+		<div class="c-choice__item" style="background-image: url('/img/c6.png')">
+			<p class="c-choice__text">Прозрачность работы</p>
+		</div>
+	</div>
+</section>
+<section class="c-works">
+	<h3 class="page-title">Наши работы</h3>
+	<div class="c-works__wrapper">
+		<div class="c-works__item c-work" style="background-image: url('/img/w1.png')">
+			<div class="c-work__wrapper">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w2.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w3.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w4.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ. </h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w5.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w6.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w7.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+		<div class="c-works__item c-work" style="background-image: url('/img/w8.png')">
+			<div class="c-work__wrapper ">
+				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
+				<p class="c-work__text">Выполненные работы:</p>
+				<ul class="c-work__list">
+					<li>восстановительная полировка кузова;</li>
+					<li>защитное покрытие CANDY;</li>
+					<li>полная химчистка салона;</li>
+					<li>окрас суппортов без снятия;</li>
+					<li>антихром значков.</li>
+				</ul>
+				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="c-news">
+	<h3 class="page-title">Последние новости</h3>
+	<div class="c-news__wrapper">
+		<div class="c-news__item">
+			<img class="c-news__image" src="img/n1.png" alt="">
+			<span class="c-news__mark">10.10</span>
+			<div class="c-news__description">
+				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
+				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
+			</div>
+		</div>
+		<div class="c-news__item">
+			<img class="c-news__image" src="img/n2.png" alt="">
+			<span class="c-news__mark">10.10</span>
+			<div class="c-news__description">
+				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
+				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
+			</div>
+		</div>
+		<div class="c-news__item">
+			<img class="c-news__image" src="img/n3.png" alt="">
+			<span class="c-news__mark">10.10</span>
+			<div class="c-news__description">
+				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
+				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
+			</div>
+		</div>
+	</div>
+	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
+</section>
 @@include('./template/footer.html')
