--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <div class="c-top-panel">
 	<div class="c-top-panel__wrapper">
 		<div class="c-top-panel__block">
-			<button class="c-top-panel__button c-button-sing-up">Записаться</button>
+			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent">Записаться</button>
 			<p class="c-top-panel__text m-l-20">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
 		</div>
 		<div class="c-top-panel__block">
@@ -23,13 +23,13 @@
 <div class="c-main-slider">
 	<header class="c-header">
 		<div class="c-header__wrapper">
-			<img class="c-header__logo" src="img/logo.png" >
+			<img class="c-header__logo" src="img/logo.svg" >
 			<nav class="c-header__nav c-nav">
 				<div class="c-nav__list">
 					<div class="c-nav__item"><a class="c-nav__link">Дейтелинг</a></div>
 					<div class="c-nav__item m-l-85">
-						<a class="c-nav__link c-nav__link--parent">Услуги</a><i class="fas fa-caret-up c-nav__caret col-red"></i>
-						<ul class="c-nav__drop-menu c-drop-menu">
+						<a class="c-nav__link c-nav__link--parent">Услуги</a><i class="fas fa-caret-down c-nav__caret col-red"></i>
+						<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--top">
 							<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
 							<li class="c-drop-menu__item">Керамика</li>
 							<li class="c-drop-menu__item">Антигравийная пленка</li>
@@ -138,7 +138,7 @@
 <section class="c-works">
 	<h3 class="page-title">Наши работы</h3>
 	<div class="c-works__wrapper">
-		<div class="c-works__item c-work" style="background-image: url('/img/w1.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w1.jpg')">
 			<div class="c-work__wrapper">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -152,7 +152,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w2.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w2.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -166,7 +166,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w3.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w3.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -180,7 +180,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w4.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w4.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ. </h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -194,7 +194,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w5.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w5.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -208,7 +208,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w6.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w6.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -222,7 +222,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w7.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w7.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -236,7 +236,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w8.png')">
+		<div class="c-works__item c-work" style="background-image: url('/img/w8.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -282,4 +282,49 @@
 	</div>
 	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
 </section>
+<section class="c-map">
+	<div class="c-map__wrapper">
+		<div class="c-map__form c-form">
+			<h4 class="c-form__title">Обратная связь</h4>
+			<input class="c-form__input" type="text" placeholder="Имя">
+			<input class="c-form__input" type="text" placeholder="Телефон">
+			<textarea class="c-form__input c-form__input--textarea" placeholder="Ваш комментарий"></textarea>
+			<input class="c-services__button c-form__button" type="submit" value="Отправить">
+		</div>
+	</div>
+</section>
+<footer class="c-footer">
+	<div class="c-footer__wrapper">
+		<div class="c-footer__item">
+			<img class="c-header__logo" src="img/logo.svg" >
+			<div class="c-icons m-t-15">
+				<span class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></span>
+				<span class="c-icons__icon c-icons__icon--white m-l-5"><i class="fab fa-vk icon-middle"></i></span>
+			</div>
+		</div>
+		<div class="c-footer__item">
+			<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--footer">
+				<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
+				<li class="c-drop-menu__item">Керамика</li>
+				<li class="c-drop-menu__item">Антигравийная пленка</li>
+				<li class="c-drop-menu__item">Химчистка</li>
+				<li class="c-drop-menu__item">Стайлинг</li>
+				<li class="c-drop-menu__item">Тонировка</li>
+			</ul>
+		</div>
+		<div class="c-footer__item">
+			<button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white">Записаться</button>
+			<div class="c-footer__contacts">
+				<div class="l-container m-l-65">
+					<span class="c-top-panel__title">Контакты</span>
+					<span class="c-top-panel__phone"></span><a class="c-top-panel__number m-l-20" href="tel:+79992222222">+7 999 222 22 22</a>
+					<span class="c-top-panel__text m-t-10">ул. Большая Ордынка 38</span>
+					<span class="c-top-panel__caption m-t-10">С 9:00 до 18:00</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr class="c-footer__line" noshade size="1" color="#333333">
+	<p class="c-footer__description">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
+</footer>
 @@include('./template/footer.html')
