--- a/app/index.html
+++ b/app/index.html
@@ -282,7 +282,7 @@
 	</div>
 	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
 </section>
-<section class="c-map">
+<section class="c-map" id="map">
 	<div class="c-map__wrapper">
 		<div class="c-map__form c-form">
 			<h4 class="c-form__title">Обратная связь</h4>
