--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 @@include('./template/header.html')
 <div class="c-top-panel">
-	<div class="c-top-panel__wrapper">
+	<div class="c-top-panel__wrapper l-wrapper">
 		<div class="c-top-panel__block">
 			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent">Записаться</button>
 			<p class="c-top-panel__text m-l-20">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
@@ -22,7 +22,7 @@
 </div>
 <div class="c-main-slider">
 	<header class="c-header">
-		<div class="c-header__wrapper">
+		<div class="c-header__wrapper l-wrapper">
 			<img class="c-header__logo" src="img/logo.svg" >
 			<nav class="c-header__nav c-nav">
 				<div class="c-nav__list">
@@ -45,7 +45,7 @@
 		</div>
 	</header>
 	<div class="c-main-slider__wrapper swiper-container">
-		<div class="c-main-slider__arrows c-slide-arrows">
+		<div class="c-main-slider__arrows c-slide-arrows l-wrapper">
 			<div class="c-slide-arrows__wrapper">
 				<span class="c-slide-arrows__arrow c-slide-arrows__arrow--left"></span>
 				<span class="c-slide-arrows__arrow c-slide-arrows__arrow--right"></span>
@@ -53,13 +53,13 @@
 		</div>
 		<div class="swiper-wrapper">
 			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('/img/main_foto.jpg')">
-				<div class="c-slide__wrapper">
+				<div class="c-slide__wrapper l-wrapper">
 					<h2 class="c-slide__title">Заголовок на видео</h2>
 					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
 				</div>
 			</div>
 			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('/img/main_foto.jpg')">
-				<div class="c-slide__wrapper">
+				<div class="c-slide__wrapper l-wrapper">
 					<h2 class="c-slide__title">Заголовок на видео</h2>
 					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
 				</div>
@@ -76,7 +76,7 @@
 </div>
 <section class="c-services">
 	<h3 class="page-title">Наши услуги</h3>
-	<div class="l-section c-services__wrapper l-section--limited">
+	<div class="l-section c-services__wrapper l-wrapper">
 		<div class="c-services__item c-service">
 			<img class="c-service__image" src="/img/s1.png" alt="">
 			<div class="c-service__wrapper c-service__wrapper--active">
@@ -264,7 +264,7 @@
 </section>
 <section class="c-news">
 	<h3 class="page-title">Последние новости</h3>
-	<div class="c-news__wrapper">
+	<div class="c-news__wrapper l-wrapper">
 		<div class="c-news__item">
 			<img class="c-news__image" src="img/n1.png" alt="">
 			<span class="c-news__mark">10.10</span>
@@ -293,7 +293,7 @@
 	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
 </section>
 <section class="c-map" id="map">
-	<div class="c-map__wrapper">
+	<div class="c-map__wrapper l-wrapper">
 		<div class="c-map__form c-form">
 			<h4 class="c-form__title">Обратная связь</h4>
 			<input class="c-form__input" type="text" placeholder="Имя">
@@ -304,7 +304,7 @@
 	</div>
 </section>
 <footer class="c-footer">
-	<div class="c-footer__wrapper">
+	<div class="c-footer__wrapper l-wrapper">
 		<div class="c-footer__item">
 			<img class="c-header__logo" src="img/logo.svg" >
 			<div class="c-icons m-t-15">
