--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 	<div class="c-top-panel__wrapper l-wrapper">
 		<div class="c-top-panel__block">
 			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent">Записаться</button>
-			<p class="c-top-panel__text m-l-20">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
+			<p class="c-top-panel__text m-l-20 desktop">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
 		</div>
 		<div class="c-top-panel__block">
 			<div class="c-top-panel__contact">
