--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,12 @@
 	<div class="c-top-panel__wrapper l-wrapper">
 		<div class="c-top-panel__block">
 			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent">Записаться</button>
-			<p class="c-top-panel__text m-l-20 desktop">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
+			<p class="c-top-panel__text m-l-20">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
 		</div>
 		<div class="c-top-panel__block">
 			<div class="c-top-panel__contact">
 				<span class="c-top-panel__phone"></span>
-				<div class="l-container m-l-15">
+				<div class="l-container m-l-15 desktop">
 					<a class="c-top-panel__number" href="tel:+79992222222">+7 999 222 22 22</a>
 					<span class="c-top-panel__text">ул. Большая Ордынка 38</span>
 				</div>
@@ -312,7 +312,7 @@
 				<span class="c-icons__icon c-icons__icon--white m-l-5"><i class="fab fa-vk icon-middle"></i></span>
 			</div>
 		</div>
-		<div class="c-footer__item">
+		<div class="c-footer__item desktop">
 			<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--footer">
 				<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
 				<li class="c-drop-menu__item">Керамика</li>
@@ -322,13 +322,13 @@
 				<li class="c-drop-menu__item">Тонировка</li>
 			</ul>
 		</div>
-		<div class="c-footer__item">
+		<div class="c-footer__item c-footer__item--mobile-reverse">
 			<button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white">Записаться</button>
 			<div class="c-footer__contacts">
 				<div class="l-container m-l-65">
 					<span class="c-top-panel__title">Контакты</span>
 					<span class="c-top-panel__phone"></span><a class="c-top-panel__number m-l-20" href="tel:+79992222222">+7 999 222 22 22</a>
-					<span class="c-top-panel__text m-t-10">ул. Большая Ордынка 38</span>
+					<span class="c-top-panel__text m-t-10 ">ул. Большая Ордынка 38</span>
 					<span class="c-top-panel__caption m-t-10">С 9:00 до 18:00</span>
 				</div>
 			</div>
