--- a/app/index.html
+++ b/app/index.html
@@ -298,7 +298,8 @@
 	</div>
 	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
 </section>
-<section class="c-map" id="map">
+<section class="c-map">
+	<div class="c-map__container" id="map"></div>
 	<div class="c-map__wrapper l-wrapper">
 		<div class="c-map__form c-form">
 			<h4 class="c-form__title">Обратная связь</h4>
