--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 @@include('./template/header.html')
 <div class="c-top-panel">
 	<div class="c-top-panel__wrapper l-wrapper">
-		<div class="c-menu-button js-menu-button">
+		<div class="c-menu-button js-menu-button mobile-visible">
 			<div class="c-menu-button__bar c-menu-button__bar--top"></div>
 			<div class="c-menu-button__bar c-menu-button__bar--middle"></div>
 			<div class="c-menu-button__bar c-menu-button__bar--bottom"></div>
@@ -13,15 +13,15 @@
 		</div>
 		<div class="c-top-panel__block">
 			<div class="c-top-panel__contact">
-				<span class="c-top-panel__phone"></span>
+				<a href="tel:+79992222222" class="c-top-panel__phone"></a>
 				<div class="l-container ml-15 desktop">
 					<a class="c-top-panel__number" href="tel:+79992222222">+7 999 222 22 22</a>
 					<span class="c-top-panel__text">ул. Большая Ордынка 38</span>
 				</div>
 			</div>
 			<div class="c-icons ml-30 m-ml-15">
-				<span class="c-icons__icon c-icons__icon--red"><i class="fab fa-instagram icon-middle"></i></span>
-				<span class="c-icons__icon c-icons__icon--red ml-5"><i class="fab fa-vk icon-middle"></i></span>
+				<a href="#" class="c-icons__icon c-icons__icon--red"><i class="fab fa-instagram icon-middle"></i></a>
+				<a href="#" class="c-icons__icon c-icons__icon--red ml-5"><i class="fab fa-vk icon-middle"></i></a>
 			</div>
 		</div>
 	</div>
@@ -31,9 +31,9 @@
 		<div class="c-header__wrapper l-wrapper">
 			<img class="c-header__logo" src="img/logo.svg" >
 			<nav class="c-header__nav c-nav mob-hidden">
-				<div class="c-nav__list">
-					<div class="c-nav__item"><a class="c-nav__link">Дейтелинг</a></div>
-					<div class="c-nav__item ml-85">
+				<ul class="c-nav__list">
+					<li class="c-nav__item"><a class="c-nav__link">Дейтелинг</a></li>
+					<li class="c-nav__item ml-85">
 						<a class="c-nav__link c-nav__link--parent">Услуги</a><i class="fas fa-caret-down c-nav__caret col-red"></i>
 						<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--top">
 							<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
@@ -43,10 +43,10 @@
 							<li class="c-drop-menu__item">Стайлинг</li>
 							<li class="c-drop-menu__item">Тонировка</li>
 						</ul>
-					</div>
-					<div class="c-nav__item ml-85"><a class="c-nav__link">Новости</a></div>
-					<div class="c-nav__item ml-85"><a class="c-nav__link">Контакты</a></div>
-				</div>
+					</li>
+					<li class="c-nav__item ml-85"><a class="c-nav__link">Новости</a></li>
+					<li class="c-nav__item ml-85"><a class="c-nav__link">Контакты</a></li>
+				</ul>
 			</nav>
 		</div>
 	</header>
@@ -315,8 +315,8 @@
 		<div class="c-footer__item">
 			<img class="c-header__logo" src="img/logo.svg" >
 			<div class="c-icons m-t-15">
-				<span class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></span>
-				<span class="c-icons__icon c-icons__icon--white ml-5"><i class="fab fa-vk icon-middle"></i></span>
+				<a href='#' class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></a>
+				<a href='#' class="c-icons__icon c-icons__icon--white ml-5"><i class="fab fa-vk icon-middle"></i></a>
 			</div>
 		</div>
 		<div class="c-footer__item desktop">
@@ -334,7 +334,7 @@
 			<div class="c-footer__contacts">
 				<div class="l-container ml-65">
 					<span class="c-top-panel__title">Контакты</span>
-					<span class="c-top-panel__phone"></span><a class="c-top-panel__number ml-20" href="tel:+79992222222">+7 999 222 22 22</a>
+					<a href="tel:+79992222222" class="c-top-panel__phone"></a><a class="c-top-panel__number ml-20" href="tel:+79992222222">+7 999 222 22 22</a>
 					<span class="c-top-panel__text m-t-10 ">ул. Большая Ордынка 38</span>
 					<span class="c-top-panel__caption m-t-10">С 9:00 до 18:00</span>
 				</div>
