--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 <div class="c-main-slider">
 	<header class="c-header">
 		<div class="c-header__wrapper l-wrapper">
-			<img class="c-header__logo" src="img/logo.svg" >
+			<img class="c-header__logo" src="img/logo.svg" alt="Логотип">
 			<nav class="c-header__nav c-nav mob-hidden">
 				<ul class="c-nav__list">
 					<li class="c-nav__item"><a class="c-nav__link">Дейтелинг</a></li>
@@ -313,7 +313,7 @@
 <footer class="c-footer">
 	<div class="c-footer__wrapper l-wrapper">
 		<div class="c-footer__item">
-			<img class="c-header__logo" src="img/logo.svg" >
+			<img class="c-header__logo" src="img/logo.svg" alt="">
 			<div class="c-icons m-t-15">
 				<a href='#' class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></a>
 				<a href='#' class="c-icons__icon c-icons__icon--white ml-5"><i class="fab fa-vk icon-middle"></i></a>
@@ -341,7 +341,7 @@
 			</div>
 		</div>
 	</div>
-	<hr class="c-footer__line" noshade size="1" color="#333333">
+	<hr class="c-footer__line">
 	<p class="c-footer__description">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
 </footer>
 @@include('./template/footer.html')
